# information-retrieval

./: .gitignore  CMakeLists.txt  compress_all.sh  compression_tests.sh  create_index.sh  create_index_all.sh  create_tests.sh  decompress_all.sh  decompression_tests.sh  ir.sh  scrapper.py
docs/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  (+56 more)
docs.gov/: 0.txt  1.txt  10.txt  100.txt  1000.txt  1001.txt  1002.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  1008.txt  1009.txt  101.txt  1010.txt  1011.txt  1012.txt  1013.txt  1014.txt  1015.txt  1016.txt  1017.txt  1018.txt  1019.txt  102.txt  1020.txt  1021.txt  1022.txt  1023.txt  1024.txt  1025.txt  1026.txt  1027.txt  1028.txt  1029.txt  1030.txt  1031.txt  1032.txt  1033.txt  (+1145 more)
include/ir/: common.h  inverted_index.h  inverted_index_search.h  scanner.h
index.gov/nulc/: 0.nulc  00.nulc  000.nulc  00112.nulc  00126.nulc  00133.nulc  00192.nulc  002.nulc  003.nulc  00360.nulc  00493.nulc  005.nulc  007.nulc  00717.nulc  008.nulc  0097.nulc  00PM.nulc  01.nulc  01044.nulc  012.nulc  01389.nulc  01443.nulc  01498.nulc  01570.nulc  01855.nulc  01904.nulc  02.nulc  020.nulc  020621.nulc  02195.nulc  022.nulc  0233.nulc  026.nulc  0268.nulc  02789.nulc  028.nulc  029.nulc  0291.nulc  02933.nulc  0299S.nulc  (+27603 more)
index.gov/rice/: 0.rice  00.rice  000.rice  00112.rice  00126.rice  00133.rice  00192.rice  002.rice  003.rice  00360.rice  00493.rice  005.rice  007.rice  00717.rice  008.rice  0097.rice  00PM.rice  01.rice  01044.rice  012.rice  01389.rice  01443.rice  01498.rice  01570.rice  01855.rice  01904.rice  02.rice  020.rice  020621.rice  02195.rice  022.rice  0233.rice  026.rice  0268.rice  02789.rice  028.rice  029.rice  0291.rice  02933.rice  0299S.rice  (+27603 more)
index.gov/s16/: 0.s16  00.s16  000.s16  00112.s16  00126.s16  00133.s16  00192.s16  002.s16  003.s16  00360.s16  00493.s16  005.s16  007.s16  00717.s16  008.s16  0097.s16  00PM.s16  01.s16  01044.s16  012.s16  01389.s16  01443.s16  01498.s16  01570.s16  01855.s16  01904.s16  02.s16  020.s16  020621.s16  02195.s16  022.s16  0233.s16  026.s16  0268.s16  02789.s16  028.s16  029.s16  (+27606 more)
lib/: CMakeLists.txt
lib/compression/: CMakeLists.txt  coding.h  coding_factory.cc  coding_factory.h  io_utils.cc  io_utils.h  rice_coding2.cc  rice_coding2.h
src/: CMakeLists.txt  main.cpp
src/compress/: CMakeLists.txt  main.cpp
src/create_index/: CMakeLists.txt  main.cpp
src/create_test/: CMakeLists.txt  main.cpp
src/decompress/: CMakeLists.txt  main.cpp
src/ir/: CMakeLists.txt  main.cpp
(+107007 files in other folders)
